// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests 1`] = `
{
  "admin": "address",
  "decision_policy": {
    "type": "cosmos-sdk/PercentageDecisionPolicy",
    "value": {
      "percentage": "0.5",
      "windows": {
        "min_execution_period": "100000000000",
        "voting_period": "100000000000",
      },
    },
  },
  "group_metadata": "https://some.ipfs.w3s.link/group_metadata.json",
  "group_policy_as_admin": true,
  "group_policy_metadata": "https://some.ipfs.w3s.link/group_metadata.json",
  "members": [
    {
      "address": "address",
      "metadata": "First user",
      "weight": "10",
    },
  ],
}
`;

exports[`tests 2`] = `
{
  "type": "cosmos-sdk/PercentageDecisionPolicy",
  "value": {
    "percentage": "0.5",
    "windows": {
      "min_execution_period": "100000000000",
      "voting_period": "100000000000",
    },
  },
}
`;

exports[`tests 3`] = `
{
  "encodedVersion": {
    "$typeUrl": "/google.protobuf.Any",
    "typeUrl": "/cosmos.group.v1.PercentageDecisionPolicy",
    "value": {
      "data": [
        10,
        3,
        48,
        46,
        53,
        18,
        8,
        10,
        2,
        8,
        100,
        18,
        2,
        8,
        100,
      ],
      "type": "Buffer",
    },
  },
}
`;

exports[`tests 4`] = `
{
  "decodedVersion": {
    "type": "cosmos-sdk/PercentageDecisionPolicy",
    "value": {
      "percentage": "0.5",
      "windows": {
        "min_execution_period": "100000000000",
        "voting_period": "100000000000",
      },
    },
  },
}
`;

exports[`tests 5`] = `
{
  "percentage": "0.5",
  "windows": {
    "minExecutionPeriod": {
      "nanos": 0,
      "seconds": Long {
        "high": 0,
        "low": 100,
        "unsigned": false,
      },
    },
    "votingPeriod": {
      "nanos": 0,
      "seconds": Long {
        "high": 0,
        "low": 100,
        "unsigned": false,
      },
    },
  },
}
`;

exports[`tests 6`] = `
{
  "percentage": "0.5",
  "windows": {
    "min_execution_period": "100000000000",
    "voting_period": "100000000000",
  },
}
`;

exports[`tests 7`] = `
{
  "admin": "address",
  "decisionPolicy": {
    "$typeUrl": "/google.protobuf.Any",
    "typeUrl": "/cosmos.group.v1.PercentageDecisionPolicy",
    "value": {
      "data": [
        10,
        3,
        48,
        46,
        53,
        18,
        8,
        10,
        2,
        8,
        100,
        18,
        2,
        8,
        100,
      ],
      "type": "Buffer",
    },
  },
  "groupMetadata": "https://some.ipfs.w3s.link/group_metadata.json",
  "groupPolicyAsAdmin": true,
  "groupPolicyMetadata": "https://some.ipfs.w3s.link/group_metadata.json",
  "members": [
    {
      "address": "address",
      "metadata": "First user",
      "weight": "10",
    },
  ],
}
`;

exports[`where it breaks 1`] = `
{
  "admin": "address",
  "decision_policy": {
    "type": "cosmos-sdk/PercentageDecisionPolicy",
    "value": {
      "percentage": "0.5",
      "windows": {
        "min_execution_period": "100000000000",
        "voting_period": "100000000000",
      },
    },
  },
  "group_metadata": "https://some.ipfs.w3s.link/group_metadata.json",
  "group_policy_as_admin": true,
  "group_policy_metadata": "https://some.ipfs.w3s.link/group_metadata.json",
  "members": [
    {
      "address": "address",
      "metadata": "First user",
      "weight": "10",
    },
  ],
}
`;

exports[`where it breaks 2`] = `
{
  "encodedVersion": {
    "$typeUrl": "/google.protobuf.Any",
    "typeUrl": "/cosmos.group.v1.PercentageDecisionPolicy",
    "value": {
      "data": [
        10,
        3,
        48,
        46,
        53,
        18,
        8,
        10,
        2,
        8,
        100,
        18,
        2,
        8,
        100,
      ],
      "type": "Buffer",
    },
  },
}
`;

exports[`where it breaks 3`] = `
{
  "decodedVersion": {
    "type": "cosmos-sdk/PercentageDecisionPolicy",
    "value": {
      "percentage": "0.5",
      "windows": {
        "min_execution_period": "100000000000",
        "voting_period": "100000000000",
      },
    },
  },
}
`;

exports[`where it breaks 4`] = `
{
  "encodedVersion2": {
    "$typeUrl": "/google.protobuf.Any",
    "typeUrl": "/cosmos.group.v1.PercentageDecisionPolicy",
    "value": {
      "data": [
        10,
        3,
        48,
        46,
        53,
        18,
        8,
        10,
        2,
        8,
        100,
        18,
        2,
        8,
        100,
      ],
      "type": "Buffer",
    },
  },
}
`;

exports[`where it breaks 5`] = `
{
  "decodedVersion2": {
    "type": "cosmos-sdk/PercentageDecisionPolicy",
    "value": {
      "percentage": "0.5",
      "windows": {
        "min_execution_period": "100000000000",
        "voting_period": "100000000000",
      },
    },
  },
}
`;
